force-app/main/default/objects/NPP__c/NPP__c.object-meta.xml
<CustomObject>
    <label>NPP</label>
    <nameField>
        <label>NPP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>