force-app/main/default/objects/NPP__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPP</relationshipLabel>
    <relationshipName>NPP</relationshipName>
    <type>Lookup</type>
</CustomField>