force-app/main/default/objects/NPP__c/fields/Address_City_State_and_Zip_of_Doctor_o__c.field-meta.xml
<CustomField>
    <fullName>Address_City_State_and_Zip_of_Doctor_o__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Address of Doctor office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>