force-app/main/default/objects/NPP__c/fields/Appointment_Confirmation_Contact_Prefere__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Confirmation_Contact_Prefere__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Appointment confirmation contact?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>