force-app/main/default/objects/NPP__c/fields/Covid_19_Vaccination_status_Migration__c.field-meta.xml
<CustomField>
    <fullName>Covid_19_Vaccination_status_Migration__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Covid-19 Vaccination status</label>
    <type>TextArea</type>
</CustomField>