force-app/main/default/objects/NPP__c/fields/DocumentID_Migration__c.field-meta.xml
<CustomField>
    <fullName>DocumentID_Migration__c</fullName>
    <caseSensitive>true</caseSensitive>
    <complianceGroup>HIPAA</complianceGroup>
    <label>DocumentID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>