force-app/main/default/objects/NPP__c/fields/HQ_Accident__c.field-meta.xml
<CustomField>
    <fullName>HQ_Accident__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Accident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>