force-app/main/default/objects/NPP__c/fields/HQ_Accident_Address__c.field-meta.xml
<CustomField>
    <fullName>HQ_Accident_Address__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Accident Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>