force-app/main/default/objects/NPP__c/fields/HQ_Active_Cancer_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>HQ_Active_Cancer_Diagnosis__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Do you have a current and active cancer diagnosis?</description>
    <inlineHelpText>Do you have a current and active cancer diagnosis?</inlineHelpText>
    <label>Active Cancer Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>