force-app/main/default/objects/NPP__c/fields/HQ_Additional_Pain_Complaints__c.field-meta.xml
<CustomField>
    <fullName>HQ_Additional_Pain_Complaints__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Additional pain complaints</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>