force-app/main/default/objects/NPP__c/fields/HQ_Alcohol_Consumption__c.field-meta.xml
<CustomField>
    <fullName>HQ_Alcohol_Consumption__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Alcohol consumption</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Socially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>