force-app/main/default/objects/NPP__c/fields/HQ_Allergies__c.field-meta.xml
<CustomField>
    <fullName>HQ_Allergies__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Allergies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No known allergies</fullName>
            </value>
            <value>
                <fullName>Latex</fullName>
            </value>
            <value>
                <fullName>Antibiotics (penicillin)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>