force-app/main/default/objects/NPP__c/fields/HQ_Any_issues_or_concerns_with_immune__c.field-meta.xml
<CustomField>
    <fullName>HQ_Any_issues_or_concerns_with_immune__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Any issues or concerns with immune syst</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>