force-app/main/default/objects/NPP__c/fields/HQ_Any_new_surgeries_or_procedures_since__c.field-meta.xml
<CustomField>
    <fullName>HQ_Any_new_surgeries_or_procedures_since__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>New surgeries since last visit?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>