force-app/main/default/objects/NPP__c/fields/HQ_Appointment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>HQ_Appointment_Scheduled__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Appointment scheduled</label>
    <type>Date</type>
</CustomField>