force-app/main/default/objects/NPP__c/fields/HQ_Are_you_or_could_you_be_pregnant__c.field-meta.xml
<CustomField>
    <fullName>HQ_Are_you_or_could_you_be_pregnant__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Are you or could you be pregnant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>