force-app/main/default/objects/NPP__c/fields/HQ_Are_you_taking_blood_thinners__c.field-meta.xml
<CustomField>
    <fullName>HQ_Are_you_taking_blood_thinners__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Are you taking blood thinners?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>