force-app/main/default/objects/NPP__c/fields/HQ_Assignment_benefits_consent__c.field-meta.xml
<CustomField>
    <fullName>HQ_Assignment_benefits_consent__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Assignment benefits  consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>