force-app/main/default/objects/NPP__c/fields/HQ_Attorney_Address__c.field-meta.xml
<CustomField>
    <fullName>HQ_Attorney_Address__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Attorney Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>