force-app/main/default/objects/NPP__c/fields/HQ_Billing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>HQ_Billing_Address_Street__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Billing Address (Street)</label>
    <type>Address</type>
</CustomField>