force-app/main/default/objects/NPP__c/fields/HQ_Billing_City_and_State__c.field-meta.xml
<CustomField>
    <fullName>HQ_Billing_City_and_State__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Billing City and State</label>
    <type>TextArea</type>
</CustomField>