force-app/main/default/objects/NPP__c/fields/HQ_Bunion_Causing_Pain_Discomfort__c.field-meta.xml
<CustomField>
    <fullName>HQ_Bunion_Causing_Pain_Discomfort__c</fullName>
    <label>Bunion Causing Pain/Discomfort?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>