force-app/main/default/objects/NPP__c/fields/HQ_Card_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Card_Billing_Date__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Card Billing Date</label>
    <type>Date</type>
</CustomField>