force-app/main/default/objects/NPP__c/fields/HQ_Chief_Complaint__c.field-meta.xml
<CustomField>
    <fullName>HQ_Chief_Complaint__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Chief complaint</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>