force-app/main/default/objects/NPP__c/fields/HQ_City_and_State__c.field-meta.xml
<CustomField>
    <fullName>HQ_City_and_State__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>City and State</label>
    <type>Address</type>
</CustomField>