force-app/main/default/objects/NPP__c/fields/HQ_Claim_SSN__c.field-meta.xml
<CustomField>
    <fullName>HQ_Claim_SSN__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Claim#/SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>