force-app/main/default/objects/NPP__c/fields/HQ_Consent_for_Marketing_Mails__c.field-meta.xml
<CustomField>
    <fullName>HQ_Consent_for_Marketing_Mails__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Consent for Marketing Mails</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes I consent to receive communication from the Company via automated phone calls and/or text messages (SMS and MMS) for educational marketing advertising appointment scheduling and appointment reminder purposes at these phone numbers</fullName>
            </value>
            <value>
                <fullName>No I do not consent to receive automated phone calls or text messages from the Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>