force-app/main/default/objects/NPP__c/fields/HQ_CONTACT_TO_CONFIRM_APPOINTMENT__c.field-meta.xml
<CustomField>
    <fullName>HQ_CONTACT_TO_CONFIRM_APPOINTMENT__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Contact to confirm schdule appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>