force-app/main/default/objects/NPP__c/fields/HQ_COVID_19_Vaccination_Status__c.field-meta.xml
<CustomField>
    <fullName>HQ_COVID_19_Vaccination_Status__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>COVID-19 Vaccination status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>