force-app/main/default/objects/NPP__c/fields/HQ_Covid_Vaccination_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Covid_Vaccination_Date__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>COVID Vaccination Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>