force-app/main/default/objects/NPP__c/fields/HQ_Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>HQ_Credit_Card_Number__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Credit Card Number</label>
    <length>165</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>