force-app/main/default/objects/NPP__c/fields/HQ_Credit_Card_Type_other__c.field-meta.xml
<CustomField>
    <fullName>HQ_Credit_Card_Type_other__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Credit Card Type other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>