force-app/main/default/objects/NPP__c/fields/HQ_Current_Medications__c.field-meta.xml
<CustomField>
    <fullName>HQ_Current_Medications__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Current medications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No current medications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>