force-app/main/default/objects/NPP__c/fields/HQ_Current_Medications_If_YES__c.field-meta.xml
<CustomField>
    <fullName>HQ_Current_Medications_If_YES__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Current medications</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>