force-app/main/default/objects/NPP__c/fields/HQ_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Date</label>
    <type>Date</type>
</CustomField>