force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Active_Cancer_Diagnosi__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Active_Cancer_Diagnosi__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Active Cancer Diagnosis</description>
    <inlineHelpText>Active Cancer Diagnosis</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>