force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Congestive_Heart_Failu__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Congestive_Heart_Failu__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Congestive Heart Failure</description>
    <inlineHelpText>Congestive Heart Failure</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>