force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Deep_Vein_Thrombosis__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Deep_Vein_Thrombosis__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Vein Thrombosis</description>
    <inlineHelpText>Vein Thrombosis</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>