force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Heart_Arrhythmia__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Heart_Arrhythmia__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Heart Arrhythmia/Murmur</description>
    <inlineHelpText>Heart Arrhythmia/Murmur</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>