force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Heart_Attacks__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Heart_Attacks__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Heart Attacks</description>
    <inlineHelpText>Heart Attacks</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>