force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Kawasaki_Disease__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Kawasaki_Disease__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Kawasaki_Disease</description>
    <inlineHelpText>Kawasaki Disease</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>