force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Lymphedema__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Lymphedema__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Lymphedema</description>
    <inlineHelpText>Lymphedema</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>