force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Myocarditis__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Myocarditis__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>myocarditis</description>
    <inlineHelpText>myocarditis</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>