force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Pacemaker__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Pacemaker__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>pacemaker</description>
    <inlineHelpText>Pacemaker</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>