force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_Pulmonary_Embolism__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_Pulmonary_Embolism__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Pulmonary Embolism</description>
    <inlineHelpText>Pulmonary Embolism</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>