force-app/main/default/objects/NPP__c/fields/HQ_Date_Diagnosed_strokes__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Diagnosed_strokes__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>strokes</description>
    <inlineHelpText>Strokes</inlineHelpText>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>