force-app/main/default/objects/NPP__c/fields/HQ_Date_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_of_Accident__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Date of accident</label>
    <type>Date</type>
</CustomField>