force-app/main/default/objects/NPP__c/fields/HQ_Date_Range_Authorized_for_Release__c.field-meta.xml
<CustomField>
    <fullName>HQ_Date_Range_Authorized_for_Release__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Date range authorized for release</label>
    <type>Date</type>
</CustomField>