force-app/main/default/objects/NPP__c/fields/HQ_Diabetes_and_Neuropathy_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>HQ_Diabetes_and_Neuropathy_Diagnosis__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Diabetes and Neuropathy Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>