force-app/main/default/objects/NPP__c/fields/HQ_Diagnosed_with_Lymphedema__c.field-meta.xml
<CustomField>
    <fullName>HQ_Diagnosed_with_Lymphedema__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Diagnosed with Lymphedema?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>