force-app/main/default/objects/NPP__c/fields/HQ_Diseases_or_infections_bodily_fluids__c.field-meta.xml
<CustomField>
    <fullName>HQ_Diseases_or_infections_bodily_fluids__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Diseases or infections bodily fluids?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>