force-app/main/default/objects/NPP__c/fields/HQ_Do_you_experience_leg_fatigue__c.field-meta.xml
<CustomField>
    <fullName>HQ_Do_you_experience_leg_fatigue__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Experiencing leg fatigue, fullness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>