force-app/main/default/objects/NPP__c/fields/HQ_Do_you_have_a_pacemaker__c.field-meta.xml
<CustomField>
    <fullName>HQ_Do_you_have_a_pacemaker__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Do you have a pacemaker?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>