force-app/main/default/objects/NPP__c/fields/HQ_Do_you_have_history_of_following__c.field-meta.xml
<CustomField>
    <fullName>HQ_Do_you_have_history_of_following__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Do you have history of following?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>High Blood Pressure</fullName>
            </value>
            <value>
                <fullName>Heart Attack</fullName>
                <label>Heart attack</label>
            </value>
            <value>
                <fullName>Stroke</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Hepatitis</fullName>
            </value>
            <value>
                <fullName>HIV</fullName>
            </value>
            <value>
                <fullName>Rheumatoid Arthritis</fullName>
                <label>Rheumatoid arthritis</label>
            </value>
            <value>
                <fullName>Menstrual Problems</fullName>
                <label>Menstrual problems</label>
            </value>
            <value>
                <fullName>Kidney Stones</fullName>
                <label>Kidney stones</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Anemia</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Emphysema/COPD</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>High/Low Cholesterol</fullName>
            </value>
            <value>
                <fullName>Hyper/Hypo Thyroidism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>