force-app/main/default/objects/NPP__c/fields/HQ_Do_you_have_Medicare_Coverage__c.field-meta.xml
<CustomField>
    <fullName>HQ_Do_you_have_Medicare_Coverage__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Do you have Medicare Coverage?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>