force-app/main/default/objects/NPP__c/fields/HQ_Doctor_or_Hospital_Release__c.field-meta.xml
<CustomField>
    <fullName>HQ_Doctor_or_Hospital_Release__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Doctor or Hospital release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>