force-app/main/default/objects/NPP__c/fields/HQ_Doctor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>HQ_Doctor_s_Name__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Doctor&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>