force-app/main/default/objects/NPP__c/fields/HQ_does_anyone_in_your_family_suffer__c.field-meta.xml
<CustomField>
    <fullName>HQ_does_anyone_in_your_family_suffer__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Does anyone in your family suffer?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Blood Pressure</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Rheumatoid Arthritis</fullName>
                <label>Rheumatoid arthritis</label>
            </value>
            <value>
                <fullName>Stroke</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>