force-app/main/default/objects/NPP__c/fields/HQ_Does_anyone_suffer_in_family_Other__c.field-meta.xml
<CustomField>
    <fullName>HQ_Does_anyone_suffer_in_family_Other__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Does anyone suffer in family Other</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>