force-app/main/default/objects/NPP__c/fields/HQ_Dose_1__c.field-meta.xml
<CustomField>
    <fullName>HQ_Dose_1__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Dose 1</label>
    <type>Date</type>
</CustomField>