force-app/main/default/objects/NPP__c/fields/HQ_Dose_2__c.field-meta.xml
<CustomField>
    <fullName>HQ_Dose_2__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Dose 2</label>
    <type>Date</type>
</CustomField>