force-app/main/default/objects/NPP__c/fields/HQ_Dose_3__c.field-meta.xml
<CustomField>
    <fullName>HQ_Dose_3__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Dose 3</label>
    <type>Date</type>
</CustomField>