force-app/main/default/objects/NPP__c/fields/HQ_Drinks_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>HQ_Drinks_Per_Day__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Drinks per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>