force-app/main/default/objects/NPP__c/fields/HQ_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>HQ_Email_Address__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Email Address:</label>
    <type>Email</type>
</CustomField>