force-app/main/default/objects/NPP__c/fields/HQ_Employer__c.field-meta.xml
<CustomField>
    <fullName>HQ_Employer__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>